Finish off size of markers

--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting event_id: 1718469533\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -85,316 +92,358 @@
        },
        "data": [
         {
+         "hovertemplate": "\n                    <b>X:</b> %{x}\n                    <br>\n                    <b>Y:</b> %{y}\n                    <br>\n                    <b>Size:</b> %{marker.size}<br>\n                    <b>Size (multiplied by 10):</b> %{marker.size*10:.2f}<br>\n                    <b>Color (multiplied by 2):</b> %{marker.color*2:.2f}\n                ",
          "marker": {
           "color": [
-           6545,
-           6753,
-           9671,
-           9898,
-           10151,
-           10285,
-           10359,
-           10601,
-           10707,
-           10806,
-           10913,
-           11044,
-           11160,
-           11238,
-           11416,
-           11609,
-           11623,
-           11623,
-           11628,
-           11632,
-           11634,
-           11656,
-           11702,
-           11707,
-           11714,
-           11715,
-           11735,
-           11748,
-           11826,
-           11847,
-           11874,
-           12045,
-           12084,
-           12108,
-           12113,
-           12136,
-           12178,
-           12185,
-           12206,
-           12225,
-           12246,
-           12259,
-           12265,
-           12353,
-           12379,
-           12454,
-           12669,
-           12707,
-           12772,
-           12785,
-           12851,
-           12910,
-           12923,
-           12949,
-           13040,
-           13050,
-           13202,
-           13251,
-           13316,
-           13433,
-           13595,
-           13605,
-           13676,
-           13780,
-           14123,
-           14630,
-           15178,
-           16082,
-           16115,
-           17098,
-           17302,
-           17550,
-           17903,
-           18236
+           22875,
+           23841,
+           24415,
+           24930,
+           25035,
+           25097,
+           25340,
+           25440,
+           25811,
+           26131,
+           26153,
+           26195,
+           26197,
+           26433,
+           26609,
+           26617,
+           26746,
+           26752,
+           26859,
+           26877,
+           27010,
+           27022,
+           27161,
+           27336,
+           27681,
+           28236,
+           28292,
+           28513,
+           28520,
+           28553,
+           28581,
+           28685,
+           28706,
+           28721,
+           28825,
+           28854,
+           28878,
+           28900,
+           28933,
+           29080,
+           29273,
+           29500,
+           29524,
+           29649,
+           29658,
+           29792,
+           29875,
+           29923,
+           30022,
+           30152,
+           30414,
+           30793,
+           31146,
+           31261,
+           31386,
+           31568,
+           31628,
+           31750,
+           32815,
+           33143,
+           33241,
+           33458,
+           33503,
+           33883,
+           33960,
+           34354,
+           34592
           ],
-          "opacity": 1,
-          "size": 5
+          "opacity": 0.8,
+          "showscale": true,
+          "size": [
+           9.399999618530273,
+           7.800000190734863,
+           7,
+           5,
+           8.199999809265137,
+           12.600000381469727,
+           10.600000381469727,
+           9,
+           4.199999809265137,
+           1.7999999523162842,
+           20.200000762939453,
+           5,
+           3.4000000953674316,
+           3.799999952316284,
+           6.199999809265137,
+           7.400000095367432,
+           13.800000190734863,
+           13,
+           7,
+           7,
+           11,
+           7.400000095367432,
+           7.400000095367432,
+           8.199999809265137,
+           7.800000190734863,
+           11.399999618530273,
+           5.400000095367432,
+           6.599999904632568,
+           9,
+           7.800000190734863,
+           8.600000381469727,
+           9,
+           7.800000190734863,
+           6.199999809265137,
+           8.199999809265137,
+           10.199999809265137,
+           1.399999976158142,
+           7,
+           7.800000190734863,
+           3.799999952316284,
+           6.599999904632568,
+           10.600000381469727,
+           7.400000095367432,
+           5.400000095367432,
+           5.400000095367432,
+           7,
+           7.800000190734863,
+           4.199999809265137,
+           3,
+           5.800000190734863,
+           5.800000190734863,
+           6.199999809265137,
+           5.800000190734863,
+           9.399999618530273,
+           6.199999809265137,
+           2.5999999046325684,
+           2.5999999046325684,
+           7.400000095367432,
+           4.599999904632568,
+           7.400000095367432,
+           10.600000381469727,
+           8.600000381469727,
+           9.800000190734863,
+           2.5999999046325684,
+           9.800000190734863,
+           6.599999904632568,
+           7.800000190734863
+          ]
          },
          "mode": "markers",
          "name": "Detected",
          "type": "scatter3d",
          "x": [
-          -32.96,
-          -101.06,
-          -66.7,
-          -9.68,
-          -9.68,
-          -9.68,
-          -9.68,
-          -9.68,
-          -290.66,
-          -481.6,
-          361,
-          371.56,
-          224.58,
-          224.58,
-          -101.06,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          224.58,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          303.41,
-          338.44,
-          303.41,
-          303.41,
-          224.58,
-          -9.68,
-          195.03,
-          382.35,
-          382.35,
-          -32.96,
-          303.41,
-          224.58,
           292.9,
-          382.35,
-          382.35,
-          429.76,
-          382.35,
-          382.35,
-          237.78,
-          237.78,
-          303.41,
-          303.41,
-          106.94,
-          -447.74,
-          -21.97,
-          -224.09,
-          224.58,
+          -10.97,
+          -132.8,
+          101.04,
+          -145.45,
+          -245.65,
           330.03,
-          303.41,
-          544.07,
-          -88.05,
-          472.05,
-          382.35,
-          41.6,
-          -32.96,
-          505.27,
-          544.07,
-          72.37,
-          -481.6,
-          46.29,
-          338.44,
-          -88.05,
-          361,
+          -403.14,
+          -492.43,
+          -256.14,
+          194.34,
+          -10.97,
+          194.34,
+          -290.66,
+          576.37,
+          -290.66,
+          57.2,
+          57.2,
+          -200.55,
+          101.04,
           -111.51,
-          -101.06,
-          101.04
+          -279.53,
+          -368.93,
+          -413.46,
+          248.15,
+          -492.43,
+          -413.46,
+          -334.8,
+          -368.93,
+          -290.66,
+          -492.43,
+          371.56,
+          -492.43,
+          -492.43,
+          -492.43,
+          -526.63,
+          -492.43,
+          -492.43,
+          -492.43,
+          -447.74,
+          -447.74,
+          -570.9,
+          90.49,
+          -570.9,
+          -570.9,
+          -570.9,
+          444,
+          -447.74,
+          194.34,
+          35.54,
+          -413.46,
+          -570.9,
+          41.6,
+          -290.66,
+          371.56,
+          -43.27,
+          -224.09,
+          -413.46,
+          382.35,
+          79.41,
+          194.34,
+          101.04,
+          -200.55,
+          -132.8,
+          -88.05,
+          -132.8,
+          -313.6
          ],
          "y": [
-          62.44,
-          490.22,
-          276.92,
-          -79.5,
-          -79.5,
-          -79.5,
-          -79.5,
-          -79.5,
-          -307.38,
-          101.39,
-          -422.83,
-          -92.18,
-          432.35,
-          432.35,
-          490.22,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          432.35,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          335.64,
-          463.72,
-          335.64,
-          335.64,
-          432.35,
-          -79.5,
-          125.59,
-          238.9,
-          238.9,
-          62.44,
-          335.64,
-          432.35,
           5.2,
-          238.9,
-          238.9,
-          351.02,
-          238.9,
-          238.9,
-          -442.42,
-          -442.42,
-          335.64,
-          335.64,
-          27.09,
-          -113.13,
-          393.24,
-          470.86,
-          432.35,
+          6.72,
+          -501.45,
+          412.79,
+          374.24,
+          -190.49,
           127.2,
-          335.64,
-          55.89,
-          -384.3,
-          127.9,
-          238.9,
-          35.49,
-          62.44,
-          257.88,
-          55.89,
-          -66.6,
-          101.39,
-          -34.88,
-          463.72,
-          -384.3,
-          -422.83,
+          3.49,
+          -230.16,
+          -521.08,
+          -30.92,
+          6.72,
+          -30.92,
+          -307.38,
+          170.92,
+          -307.38,
+          -105.52,
+          -105.52,
+          -74.03,
+          412.79,
           159.98,
-          490.22,
-          412.79
+          23.17,
+          -210.23,
+          -327.27,
+          -111.87,
+          -230.16,
+          -327.27,
+          -424.5,
+          -210.23,
+          -307.38,
+          -230.16,
+          -92.18,
+          -230.16,
+          -230.16,
+          -230.16,
+          -15.6,
+          -230.16,
+          -230.16,
+          -230.16,
+          -113.13,
+          -113.13,
+          -125.14,
+          82.35,
+          -125.14,
+          -125.14,
+          -125.14,
+          -194.48,
+          -113.13,
+          -30.92,
+          -364.83,
+          -327.27,
+          -125.14,
+          35.49,
+          -307.38,
+          -92.18,
+          -267.52,
+          470.86,
+          -327.27,
+          238.9,
+          -248.24,
+          -30.92,
+          412.79,
+          -74.03,
+          -501.45,
+          -384.3,
+          -501.45,
+          237.44
          ],
          "z": [
-          -338.2,
-          -162.32,
-          -353.21,
-          -366.67,
-          -366.67,
-          -359.66,
-          -415.73,
-          100.9,
-          -329.87,
-          485.03,
-          431.43,
-          -111.16,
-          173.67,
-          275.79,
-          -162.32,
-          121.48,
-          104.46,
-          138.5,
-          104.46,
-          138.5,
-          121.48,
-          104.46,
-          309.84,
-          87.44,
-          155.52,
-          121.48,
-          121.48,
-          138.5,
-          104.46,
-          165.31,
-          87.44,
-          104.46,
-          156.65,
-          -366.67,
-          297.59,
-          56.01,
-          21.96,
-          -185.02,
-          87.44,
-          173.67,
-          440.34,
-          73.03,
-          38.98,
-          80.63,
-          4.94,
-          56.01,
-          -94.26,
-          -94.26,
-          2.33,
-          2.33,
-          96.55,
-          -248.24,
-          -300.16,
-          -450.74,
-          37.5,
-          177.47,
-          121.48,
-          -92.94,
-          -78.69,
-          44.71,
-          56.01,
-          99.41,
-          -338.2,
-          -21.41,
-          -178.04,
-          -328.04,
-          -366,
-          -196.88,
-          165.31,
-          -78.69,
-          -283.44,
-          466.49,
-          -162.32,
-          266.13
+          -121.34,
+          -206.06,
+          108.6,
+          -23.23,
+          -280.87,
+          212.13,
+          449.8,
+          144.37,
+          89.11,
+          -31.61,
+          -227.8,
+          -360.25,
+          -227.8,
+          452.96,
+          0.44,
+          418.92,
+          -280.55,
+          -280.55,
+          -89.32,
+          -448.75,
+          -61.15,
+          9,
+          500.53,
+          312.37,
+          378.89,
+          191.23,
+          57.06,
+          41.03,
+          75.02,
+          197.65,
+          -132.16,
+          -417.54,
+          -183.23,
+          -183.23,
+          -200.25,
+          162.25,
+          -200.25,
+          -217.27,
+          -234.29,
+          -146.11,
+          -197.18,
+          -368.45,
+          501.66,
+          -419.52,
+          -334.41,
+          -283.35,
+          -470.53,
+          -316.32,
+          -227.8,
+          310.49,
+          -334.42,
+          -470.58,
+          149.47,
+          -108.6,
+          -417.54,
+          380.98,
+          298.18,
+          -368.46,
+          158.13,
+          -420.22,
+          -227.8,
+          -448.75,
+          -89.32,
+          108.6,
+          -504.83,
+          295.83,
+          126.74
          ]
         },
         {
@@ -409,16 +458,16 @@
          "name": "Predicted",
          "type": "scatter3d",
          "x": [
-          612.7397380589616,
-          -262.6308191400427
+          -890.4078639631085,
+          546.5753266496757
          ],
          "y": [
-          697.003041054202,
-          -353.09952754068837
+          -465.3085025765364,
+          235.1908906362379
          ],
          "z": [
-          451.9732670656236,
-          -454.9665103088668
+          18.9759001968839,
+          -151.2221688536003
          ]
         },
         {
@@ -433,16 +482,16 @@
          "name": "Truth",
          "type": "scatter3d",
          "x": [
-          437.0687166929545,
-          -437.0687166929545
+          -691.4220717718234,
+          691.4220717718234
          ],
          "y": [
-          -457.6233464932816,
-          457.6233464932816
+          108.00467679443184,
+          -108.00467679443184
          ],
          "z": [
-          521.9521087454357,
-          -521.9521087454357
+          395.4963674083601,
+          -395.4963674083601
          ]
         }
        ],
@@ -1267,6 +1316,9 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Event prediction"
         }
        }
       }
@@ -1289,8 +1341,16 @@
     "batch_df = pd.read_parquet(f'{DATA_DIR}/train/batch_{batch_id}.parquet', engine='fastparquet').reset_index()\n",
     "event_df = compose_event_df(batch_df, event_id, sensor_geometry)\n",
     "true_values = get_event_true_values(meta_df, event_id)\n",
-    "plot_pca(event_df=event_df, labels=true_values, exclude_axillary=EXCLUDE_AUXILIARY)"
+    "print('Plotting event_id:', event_id)\n",
+    "plot_pca(event_df, labels=true_values, exclude_axillary=EXCLUDE_AUXILIARY)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
