Add the annotations for the properties

--- a/notebooks/pca.ipynb
+++ b/notebooks/pca.ipynb
@@ -19,7 +19,7 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "\n",
-    "\n",
+    "from typing import Optional\n",
     "import pandas as pd \n",
     "from scripts.utils import seed_it_all\n",
     "from scripts.plot import compose_event_df, plot_pca, get_event_true_values"
@@ -31,16 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Optional\n",
     "\n",
-    "\n",
-    "DATA_DIR = \"../data\"\n",
-    "EVENT: Optional[int] = None # set to None to use a random event, or set to a specific event id\n",
+    "EVENT: Optional[int] = 1220830349 # set to None to use a random event, or set to a specific event id\n",
     "EXCLUDE_AUXILIARY= False # set to True to exclude auxiliary sensor readings\n",
     "IS_TRAINING = True # set to True to use the training data, or False to use the test data\n",
     "\n",
-    "\n",
-    "DATA_SET = 'train' if IS_TRAINING else 'test' # DO NOT CHANGE THIS LINE"
+    "# DO NOT CHANGE THESE VARIABLES\n",
+    "DATA_DIR = \"../data\"\n",
+    "DATA_SET = 'train' if IS_TRAINING else 'test'"
    ]
   },
   {
@@ -74,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plotting event_id: 1718469533\n"
+      "Plotting event_id: 1220830349\n"
      ]
     },
     {
@@ -92,358 +90,337 @@
        },
        "data": [
         {
-         "hovertemplate": "\n                    <b>X:</b> %{x}\n                    <br>\n                    <b>Y:</b> %{y}\n                    <br>\n                    <b>Size:</b> %{marker.size}<br>\n                    <b>Size (multiplied by 10):</b> %{marker.size*10:.2f}<br>\n                    <b>Color (multiplied by 2):</b> %{marker.color*2:.2f}\n                ",
+         "hovertemplate": "\n                    <b>X:</b> %{x}\n                    <br>\n                    <b>Y:</b> %{y}\n                    <br>\n                    <b>Z:</b> %{z}\n                    <br>\n                    <b>Charge (x marker_size):</b> %{marker.size:.2f}<br>\n                    <b>Time:</b> %{marker.color:.2f}\n                ",
          "marker": {
           "color": [
-           22875,
-           23841,
-           24415,
-           24930,
-           25035,
-           25097,
-           25340,
-           25440,
-           25811,
-           26131,
-           26153,
-           26195,
-           26197,
-           26433,
-           26609,
-           26617,
-           26746,
-           26752,
-           26859,
-           26877,
-           27010,
-           27022,
-           27161,
-           27336,
-           27681,
-           28236,
-           28292,
-           28513,
-           28520,
-           28553,
-           28581,
-           28685,
-           28706,
-           28721,
-           28825,
-           28854,
-           28878,
-           28900,
-           28933,
-           29080,
-           29273,
-           29500,
-           29524,
-           29649,
-           29658,
-           29792,
-           29875,
-           29923,
-           30022,
-           30152,
-           30414,
-           30793,
-           31146,
-           31261,
-           31386,
-           31568,
-           31628,
-           31750,
-           32815,
-           33143,
-           33241,
-           33458,
-           33503,
-           33883,
-           33960,
-           34354,
-           34592
+           6303,
+           6317,
+           6730,
+           7227,
+           7478,
+           8305,
+           8325,
+           9290,
+           9387,
+           9824,
+           9860,
+           9865,
+           9943,
+           9967,
+           9970,
+           10022,
+           10025,
+           10099,
+           10113,
+           10133,
+           10204,
+           10273,
+           10763,
+           10836,
+           10944,
+           10956,
+           11102,
+           11106,
+           11233,
+           11261,
+           11279,
+           11292,
+           11464,
+           11470,
+           11615,
+           11698,
+           11790,
+           11803,
+           11824,
+           11843,
+           11860,
+           11977,
+           12078,
+           12107,
+           12434,
+           12743,
+           12927,
+           13036,
+           13122,
+           13311,
+           13934,
+           14303,
+           15384,
+           15395,
+           15525,
+           15794,
+           16500,
+           16581,
+           17112,
+           17701,
+           18088,
+           18274
           ],
+          "colorbar": {
+           "title": {
+            "text": "Time"
+           }
+          },
           "opacity": 0.8,
-          "showscale": true,
           "size": [
-           9.399999618530273,
-           7.800000190734863,
-           7,
-           5,
-           8.199999809265137,
-           12.600000381469727,
-           10.600000381469727,
-           9,
-           4.199999809265137,
-           1.7999999523162842,
-           20.200000762939453,
-           5,
-           3.4000000953674316,
-           3.799999952316284,
-           6.199999809265137,
-           7.400000095367432,
-           13.800000190734863,
-           13,
-           7,
-           7,
-           11,
-           7.400000095367432,
-           7.400000095367432,
-           8.199999809265137,
-           7.800000190734863,
-           11.399999618530273,
-           5.400000095367432,
-           6.599999904632568,
-           9,
-           7.800000190734863,
-           8.600000381469727,
-           9,
-           7.800000190734863,
-           6.199999809265137,
-           8.199999809265137,
-           10.199999809265137,
-           1.399999976158142,
-           7,
-           7.800000190734863,
-           3.799999952316284,
-           6.599999904632568,
-           10.600000381469727,
-           7.400000095367432,
-           5.400000095367432,
-           5.400000095367432,
-           7,
-           7.800000190734863,
-           4.199999809265137,
-           3,
-           5.800000190734863,
-           5.800000190734863,
-           6.199999809265137,
-           5.800000190734863,
-           9.399999618530273,
-           6.199999809265137,
-           2.5999999046325684,
-           2.5999999046325684,
-           7.400000095367432,
-           4.599999904632568,
-           7.400000095367432,
-           10.600000381469727,
-           8.600000381469727,
-           9.800000190734863,
-           2.5999999046325684,
-           9.800000190734863,
-           6.599999904632568,
-           7.800000190734863
+           8.700000286102295,
+           9.299999713897705,
+           16.5,
+           7.5,
+           6.8999998569488525,
+           8.700000286102295,
+           17.700000286102295,
+           12.299999713897705,
+           10.5,
+           6.8999998569488525,
+           12.299999713897705,
+           12.299999713897705,
+           6.8999998569488525,
+           10.5,
+           12.90000057220459,
+           11.700000286102295,
+           10.5,
+           8.100000143051147,
+           14.09999942779541,
+           15.299999713897705,
+           17.09999942779541,
+           7.5,
+           19.5,
+           12.90000057220459,
+           17.700000286102295,
+           11.100000143051147,
+           11.700000286102295,
+           12.299999713897705,
+           3.8999998569488525,
+           8.100000143051147,
+           7.5,
+           12.299999713897705,
+           15.299999713897705,
+           10.5,
+           5.699999928474426,
+           15.90000057220459,
+           10.5,
+           8.700000286102295,
+           9.899999856948853,
+           9.899999856948853,
+           12.90000057220459,
+           11.100000143051147,
+           4.5,
+           10.5,
+           11.100000143051147,
+           3.8999998569488525,
+           5.699999928474426,
+           12.299999713897705,
+           14.700000286102295,
+           14.700000286102295,
+           13.5,
+           10.5,
+           10.5,
+           7.5,
+           11.100000143051147,
+           14.700000286102295,
+           9.899999856948853,
+           15.299999713897705,
+           8.700000286102295,
+           12.299999713897705,
+           11.700000286102295,
+           8.700000286102295
           ]
          },
          "mode": "markers",
          "name": "Detected",
          "type": "scatter3d",
          "x": [
-          292.9,
-          -10.97,
-          -132.8,
-          101.04,
-          -145.45,
-          -245.65,
-          330.03,
-          -403.14,
-          -492.43,
-          -256.14,
-          194.34,
-          -10.97,
-          194.34,
           -290.66,
-          576.37,
-          -290.66,
-          57.2,
-          57.2,
-          -200.55,
-          101.04,
-          -111.51,
-          -279.53,
-          -368.93,
-          -413.46,
-          248.15,
-          -492.43,
-          -413.46,
-          -334.8,
-          -368.93,
-          -290.66,
-          -492.43,
-          371.56,
-          -492.43,
-          -492.43,
-          -492.43,
-          -526.63,
-          -492.43,
-          -492.43,
-          -492.43,
-          -447.74,
-          -447.74,
-          -570.9,
-          90.49,
-          -570.9,
-          -570.9,
-          -570.9,
-          444,
-          -447.74,
-          194.34,
-          35.54,
-          -413.46,
-          -570.9,
-          41.6,
-          -290.66,
-          371.56,
-          -43.27,
-          -224.09,
-          -413.46,
-          382.35,
-          79.41,
-          194.34,
-          101.04,
-          -200.55,
-          -132.8,
+          124.97,
+          54.26,
+          443.89,
+          361,
+          158.94,
           -88.05,
+          1.71,
+          443.71,
+          194.34,
+          124.97,
+          124.97,
+          -66.7,
+          124.97,
+          124.97,
+          124.97,
+          46.29,
+          124.97,
+          124.97,
+          -392.38,
+          124.97,
+          -437.04,
+          210.47,
+          210.47,
+          210.47,
+          210.47,
+          210.47,
+          210.47,
           -132.8,
-          -313.6
+          303.41,
+          248.15,
+          210.47,
+          257.31,
+          -21.97,
+          210.47,
+          326.85,
+          443.89,
+          210.47,
+          326.85,
+          -166.4,
+          79.41,
+          158.94,
+          1.71,
+          210.47,
+          371.56,
+          405.83,
+          210.47,
+          79.41,
+          -211.35,
+          -334.8,
+          11.87,
+          35.54,
+          -290.66,
+          500.43,
+          -88.05,
+          -66.7,
+          194.34,
+          -334.8,
+          405.83,
+          292.9,
+          -189.98,
+          -368.93
          ],
          "y": [
-          5.2,
-          6.72,
-          -501.45,
-          412.79,
-          374.24,
-          -190.49,
-          127.2,
-          3.49,
-          -230.16,
-          -521.08,
-          -30.92,
-          6.72,
-          -30.92,
           -307.38,
-          170.92,
-          -307.38,
-          -105.52,
-          -105.52,
-          -74.03,
-          412.79,
-          159.98,
-          23.17,
-          -210.23,
-          -327.27,
-          -111.87,
-          -230.16,
-          -327.27,
-          -424.5,
-          -210.23,
-          -307.38,
-          -230.16,
-          -92.18,
-          -230.16,
-          -230.16,
-          -230.16,
-          -15.6,
-          -230.16,
-          -230.16,
-          -230.16,
-          -113.13,
-          -113.13,
-          -125.14,
-          82.35,
-          -125.14,
-          -125.14,
-          -125.14,
-          -194.48,
-          -113.13,
-          -30.92,
-          -364.83,
-          -327.27,
-          -125.14,
-          35.49,
-          -307.38,
-          -92.18,
-          -267.52,
-          470.86,
-          -327.27,
-          238.9,
-          -248.24,
-          -30.92,
-          412.79,
-          -74.03,
-          -501.45,
+          -131.25,
+          292.97,
+          -194.5,
+          -422.83,
+          -345.23,
           -384.3,
+          -150.63,
+          -194.52,
+          -30.92,
+          -131.25,
+          -131.25,
+          276.92,
+          -131.25,
+          -131.25,
+          -131.25,
+          -34.88,
+          -131.25,
+          -131.25,
+          334.24,
+          -131.25,
+          217.8,
+          -209.77,
+          -209.77,
+          -209.77,
+          -209.77,
+          -209.77,
+          -209.77,
           -501.45,
-          237.44
+          335.64,
+          -111.87,
+          -209.77,
+          211.66,
+          393.24,
+          -209.77,
+          -209.07,
+          -194.5,
+          -209.77,
+          -209.07,
+          -287.79,
+          -248.24,
+          -345.23,
+          -150.63,
+          -209.77,
+          -92.18,
+          -306.38,
+          -209.77,
+          -248.24,
+          -404.48,
+          -424.5,
+          179.19,
+          -364.83,
+          -307.38,
+          -58.45,
+          -384.3,
+          276.92,
+          -30.92,
+          -424.5,
+          -306.38,
+          5.2,
+          257.42,
+          -210.23
          ],
          "z": [
-          -121.34,
-          -206.06,
-          108.6,
-          -23.23,
-          -280.87,
-          212.13,
-          449.8,
-          144.37,
-          89.11,
-          -31.61,
-          -227.8,
-          -360.25,
-          -227.8,
-          452.96,
-          0.44,
-          418.92,
-          -280.55,
-          -280.55,
-          -89.32,
-          -448.75,
-          -61.15,
-          9,
-          500.53,
-          312.37,
-          378.89,
-          191.23,
-          57.06,
-          41.03,
-          75.02,
-          197.65,
-          -132.16,
-          -417.54,
-          -183.23,
-          -183.23,
-          -200.25,
-          162.25,
-          -200.25,
-          -217.27,
-          -234.29,
-          -146.11,
-          -197.18,
-          -368.45,
-          501.66,
-          -419.52,
-          -334.41,
-          -283.35,
-          -470.53,
-          -316.32,
-          -227.8,
-          310.49,
-          -334.42,
-          -470.58,
-          149.47,
-          -108.6,
-          -417.54,
-          380.98,
-          298.18,
-          -368.46,
-          158.13,
+          95.65,
+          272.38,
+          -3.09,
+          6.05,
+          -436.63,
+          176.44,
+          -402.08,
+          -149.53,
+          -62.03,
+          384.95,
+          425.57,
+          425.57,
+          -234.07,
+          425.57,
+          408.55,
+          459.61,
+          449.91,
+          425.57,
+          493.65,
+          434.71,
+          340.47,
+          161.05,
+          207.59,
+          190.57,
+          139.51,
+          122.49,
+          139.51,
+          105.47,
+          397.95,
+          -304.04,
+          327.83,
+          241.63,
+          -193.43,
+          74.3,
+          241.63,
+          -29.22,
+          6.05,
+          88.45,
+          192.05,
+          429.45,
           -420.22,
-          -227.8,
-          -448.75,
-          -89.32,
-          108.6,
-          -504.83,
-          295.83,
-          126.74
+          448.77,
+          -149.53,
+          241.63,
+          43.02,
+          273.86,
+          258.65,
+          -284.05,
+          481.61,
+          -384.48,
+          -229.55,
+          276.44,
+          95.65,
+          348.67,
+          -436.13,
+          -234.07,
+          129.64,
+          -384.48,
+          273.86,
+          99.93,
+          -366.7,
+          -163.27
          ]
         },
         {
@@ -458,16 +435,16 @@
          "name": "Predicted",
          "type": "scatter3d",
          "x": [
-          -890.4078639631085,
-          546.5753266496757
+          346.9990443877889,
+          -149.99904438778896
          ],
          "y": [
-          -465.3085025765364,
-          235.1908906362379
+          -252.30202908234597,
+          -24.902164466041057
          ],
          "z": [
-          18.9759001968839,
-          -151.2221688536003
+          810.112182801012,
+          -603.8118602203668
          ]
         },
         {
@@ -482,20 +459,35 @@
          "name": "Truth",
          "type": "scatter3d",
          "x": [
-          -691.4220717718234,
-          691.4220717718234
+          -478.82636432183085,
+          478.82636432183085
          ],
          "y": [
-          108.00467679443184,
-          -108.00467679443184
+          -199.391626990844,
+          199.391626990844
          ],
          "z": [
-          395.4963674083601,
-          -395.4963674083601
+          -552.6690161781141,
+          552.6690161781141
          ]
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "align": "left",
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "\n                    <b>exclude_axillary:</b> False\n                    <br>\n                    <b>time_threshold:</b> None\n                    <br>\n                    <b>charge_threshold:</b> None\n                    <br>\n                ",
+          "x": 0,
+          "xref": "paper",
+          "y": 0,
+          "yref": "paper"
+         }
+        ],
+        "height": 800,
         "legend": {
          "x": 0,
          "y": 1
@@ -1318,7 +1310,11 @@
          }
         },
         "title": {
-         "text": "Event prediction"
+         "text": "Event prediction",
+         "x": 0.5,
+         "xanchor": "center",
+         "y": 0.9,
+         "yanchor": "top"
         }
        }
       }
@@ -1339,11 +1335,27 @@
     "    )\n",
     "    \n",
     "batch_df = pd.read_parquet(f'{DATA_DIR}/train/batch_{batch_id}.parquet', engine='fastparquet').reset_index()\n",
-    "event_df = compose_event_df(batch_df, event_id, sensor_geometry)\n",
+    "event_df = compose_event_df(batch_df, event_id, sensor_geometry)  # type: ignore\n",
+    "\n",
     "true_values = get_event_true_values(meta_df, event_id)\n",
     "print('Plotting event_id:', event_id)\n",
-    "plot_pca(event_df, labels=true_values, exclude_axillary=EXCLUDE_AUXILIARY)"
+    "\n",
+    "plot_pca(\n",
+    "    event_df, \n",
+    "    labels=true_values, \n",
+    "    exclude_axillary=EXCLUDE_AUXILIARY, \n",
+    "    marker_size=12, \n",
+    "    # charge_threshold=(0.8, 3),\n",
+    "    # time_threshold=(0, 10000)\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
